--- a/test1.html
+++ b/test1.html
@@ -14,7 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
 
-var list_chapters = [
+var listChapters = [
 "https://lichess.org/study/embed/zi7k3Rgo/pHdmJfy6",
 "https://lichess.org/study/embed/zi7k3Rgo/aReHB653",
 "https://lichess.org/study/embed/zi7k3Rgo/kJS3fQsN",
@@ -51,7 +51,7 @@ for u in [l.split('"')[1].replace('/study/','/study/embed/') for l in c if 'Site
 
   */
 
-var list_boards = [
+var listBoards = [
     "blue",
     "blue2",
     "blue3",
@@ -79,7 +79,7 @@ var list_boards = [
     "horsey",
 ];
 
-var list_pieces = [
+var listPieces = [
     "cburnett",
     "merida",
     "alpha",
@@ -117,11 +117,11 @@ var list_pieces = [
 var myFrame = document.getElementsByClassName("frame")[0];
 
 function getRandomUrl(myFrame) {
-  var index1 = Math.floor(Math.random() * cat1.length);
-  var index2 = Math.floor(Math.random() * cat2.length);
-  var index3 = Math.floor(Math.random() * cat3.length);
+  var index1 = Math.floor(Math.random() * listChapters.length);
+  var index2 = Math.floor(Math.random() * listBoards.length);
+  var index3 = Math.floor(Math.random() * listPieces.length);
 
-  var url = list_chapters[index1]+"?theme="+list_boards[index2]+"&pieceSet="+list_pieces[index3]+"&bg=dark";
+  var url = listChapters[index1]+"?theme="+listBoards[index2]+"&pieceSet="+listPieces[index3]+"&bg=dark";
   myFrame.src = url;
 }
 
