--- a/test2.html
+++ b/test2.html
@@ -8,9 +8,11 @@
 
 <p><input id="checkboxOne" type="checkbox"> Englund + Charlick
 <input id="checkboxTwo" type="checkbox"> Vienna Copycat</p>
-<p><button onClick="codeAddress();">Pick</button></p>
+
 
   <iframe class="frame" src="" style="width:600px; height: 371px" frameborder=0></iframe>
+  
+<p> <pre> &emsp; &emsp; &emsp;  &emsp; &emsp; &emsp; &emsp; &emsp; <button onClick="codeAddress();">Pick</button> </pre> </p>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
